<resources>
  <string name="app_name">Yoda</string>
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>
  <string name="nav_drawer_my_moments">Moments</string>
  <string name="nav_drawer_my_friends">Friends</string>

  <!--Commons-->
  <string name="from">来自:</string>
  <string name="send">Send</string>
  <string name="search">Search</string>
  <string name="weibo_send_content_input_hint">What\'s news&#8230;</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="error_check_network">Check Your Network Connection!</string>
  <string name="error_no_weibo">You Have Not Post Weibo!</string>
  <string name="error_no_friends">You don\'t have friends yet!</string>
  <string name="hot_tag_item">#%1$s#</string>
  <string name="ok_i_know">朕知道了</string>
  <string name="unfollow">取消关注</string>

  <!--Home Navigation-->
  <string name="main_nav_home">Home</string>
  <string name="main_nav_search">Search</string>
  <string name="main_nav_hot">Hot</string>
  <string name="main_nav_message">Message</string>
  <string name="main_nav_notification">Notification</string>
  <string name="main_nav_user">User</string>

  <!--Weibo Commons-->
  <string name="weibo_token">access_token</string>
  <string name="weibo_text">status</string>
  <string name="weibo_picture">pic</string>
  <string name="weibo_latitude">lat</string>
  <string name="weibo_longitude">long</string>
  <string name="weibo_visibility">visible</string>
  <string name="weibo_list_id">list_id</string>
  <string name="weibo_annotations">annotations</string>
  <string name="weibo_rip">rip</string>
  <string name="weibo_detail">Weibo Detail</string>
  <string name="avatar">avatar</string>
  <string name="weibo_media">weiboMedia</string>
  <string name="weibo_media_type_large_image">大图</string>
  <string name="weibo_media_type_long_image">长图</string>
  <string name="weibo_media_type_multiple_image">多图</string>
  <string name="weibo_media_type_single_image">单图</string>
  <string name="weibo_media_type_gif">Gif</string>
  <string name="weibo_media_type_video">视频</string>

  <!--Comments-->
  <string name="notif_follow_me">%1$s 及另外 %2$d 人关注了你</string>

  <!--Current Trends-->
  <string name="home_search_current_trends_title">当前热点</string>
  <string name="user_detail_profile">个人资料</string>
  <string name="user_detail_list">列表</string>
  <string name="user_detail_recommend">推荐关注</string>
  <string name="user_detail_night_mode">夜间模式</string>
  <string name="user_detail_settings">隐私设置</string>
  <string name="user_detail_support">帮助中心</string>
  <string name="user_detail_quit">退出</string>
  <string name="user_detail_data_saver">省流模式</string>
  <string name="user_detail_following_title">正在关注</string>
  <string name="user_detail_follower_title">关注者</string>

  <!--User Page-->
  <string name="user_has_no_description">这个人虽勤快,依然没有写个人简介</string>
  <string name="user_has_no_location">China</string>
  <string name="user_has_no_name">无名氏</string>
  <string name="user_cover_image">user cover image</string>

  <!--Notification-->
  <string name="notif_no_latest_follows">最近没有关注你的人哦</string>
  <string name="request_permission">高级权限接口申请中..</string>
  <string name="empty_hot_tag">当前还没有热点呢</string>
  <string name="weibo_repost">转发微博</string>
  <string name="weibo_repost_as_comment">同时作为评论发表</string>

</resources>
