<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
  <item
      android:id="@id/main_nav_home"
      android:enabled="true"
      android:icon="@drawable/ic_nav_home"
      android:title="@string/main_nav_home"
      />

  <item
      android:id="@id/main_nav_hot"
      android:enabled="true"
      android:icon="@drawable/ic_nav_hot"
      android:title="@string/main_nav_hot"
      />

  <item
      android:id="@id/main_nav_notification"
      android:enabled="true"
      android:icon="@drawable/ic_nav_notification"
      android:title="@string/main_nav_notification"
      />

  <item
      android:id="@id/main_nav_message"
      android:enabled="true"
      android:icon="@drawable/ic_nav_message"
      android:title="@string/main_nav_message"
      />

  <item
      android:id="@id/main_nav_user"
      android:enabled="true"
      android:icon="@drawable/ic_nav_user"
      android:title="@string/main_nav_user"
      />

</menu>