<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

  <RelativeLayout
      android:id="@id/root_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      >

    <ImageView
        android:id="@id/user_detail_iv_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height.very_large"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height.medium"
        android:orientation="vertical"
        android:padding="@dimen/space.small"
        >

      <ImageView
          android:id="@id/user_detail_iv_avatar"
          android:layout_width="@dimen/img.large"
          android:layout_height="@dimen/img.large"
          android:layout_gravity="center_horizontal"
          />

      <TextView
          android:id="@id/user_detail_tv_nickname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/space.small"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          tools:text="雷军"
          />

      <TextView
          android:id="@id/user_detail_tv_description"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          tools:text="CEO of XiaoMi"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:id="@id/user_detail_tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_weibo_location"
            android:gravity="center_vertical"
            tools:text="BeiJing Haidian"
            />

        <TextView
            android:id="@id/user_detail_tv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_weibo_link"
            android:gravity="center_vertical"
            tools:text="http://www.leijun.com"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >

        <TextView
            android:id="@id/user_detail_tv_following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="65w"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.very_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/user_detail_following_title"
            />

        <TextView
            android:id="@id/user_detail_tv_follower_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="1065w"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.very_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/user_detail_follower_title"
            />

      </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/include_progressbar"
        android:id="@id/progress_bar"
        />

  </RelativeLayout>

  <TextView
      android:id="@id/user_detail_tv_profile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_profile"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

  <TextView
      android:id="@id/user_detail_tv_lists"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_list"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

  <TextView
      android:id="@id/user_detail_tv_recommends"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_recommend"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_detail_night_mode"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <Switch
        android:id="@id/user_detail_swc_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        />

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_detail_data_saver"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

    <Switch
        android:id="@id/user_detail_swc_data_saver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        />

  </RelativeLayout>

  <TextView
      android:id="@id/user_detail_tv_settings"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_settings"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

  <TextView
      android:id="@id/user_detail_tv_support"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_support"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

  <TextView
      android:id="@id/user_detail_tv_quit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.divider"
      android:background="@color/white"
      android:padding="@dimen/space.small"
      android:text="@string/user_detail_quit"
      android:textAppearance="@style/TextAppearance.AppCompat"
      />

</LinearLayout>